# AI_Ears

./: .env.example  .gitignore  LICENSE  README.md  cli.py  example.mcp.json  hear_core.py  pyproject.toml  requirements.txt  server.py  test_acoustic_status.py  test_stt_status.py
